<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/top_stories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top_stories"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/national_stories"
        android:text="@string/national_stories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>
    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/state_stories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_stories"
        android:layout_weight="1"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>
    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/international_stories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/international_stories"
        android:layout_weight="1"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>
    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/business_stories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/business_stories"
        android:layout_weight="1"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>
    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/sports_stories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sports_stories"
        android:layout_weight="1"
        android:gravity="center"/>

</LinearLayout>